--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ description: "Greetings! I'm a writer, designer and technologist. This is my web
 ---
 <section class="pv4">
   <h1 class="f3 ttu fw4 ttu tracked mb2">Greetings!</h1>
-  <p>I’m a <a href="/about" title="Find out more about Robert Carroll">writer, designer and technologist</a> based in
-    Yorkshire.</p>
+  <p>I’m a <a href="/about" title="Find out more about Robert Carroll">designer and technologist</a> based in
+    the UK. I also write fiction — short, less short and (one day soon) long.</p>
 </section>
 
 <section class="pb4">
   <h2 class="f3 ttu fw4 ttu tracked mb2">Writing</h2>
   <ul class="dash">
-    <li>My debut novella is called Drone Wedding</li>
+    <li>My debut novella is called Drone Wedding. I'm currently editing it (again)</li>
     <li>You can <a href="/writing/short-story-competition" title="Read a short story by Robert Carroll">read Odyssey,
         one of my short stories</a></li>
   </ul>
@@ -37,7 +37,7 @@ description: "Greetings! I'm a writer, designer and technologist. This is my web
   <h2 class="f3 ttu fw4 ttu tracked mb2">Current projects</h2>
   <ul class="dash">
     <li>A digital news project in Dubai</li>
-    <li>Teaching digital skills at Ada, the National College for Digital Skills</li>
+    <li>Teaching web stuff at Ada, the National College for Digital Skills</li>
     <li>Planning my next long fiction work</li>
     <li>I have some availability. Please <a href="mailto:hello@wearethoughtfox.com">get in touch</a></li>
   </ul>
