--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -9,7 +9,7 @@ categories:
 <div class="pt4-l pb6">
   <div id="content" role="main">
     <section class="ph3 ph0-l mw7-ns center">
-      <h1 class="f3 ttu fw4 tracked mt5 mb2">{{ page.title }}</h1>
+      <h1 class="f3 ttu fw4 tracked mt5-l mb2">{{ page.title }}</h1>
       <p class="lh-copy measure i light-silver m0">
         {% include stub-journalism.html %}
       </p>
