--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: "Greetings! I'm a writer, designer and technologist. This is my web
 <section class="pb4">
   <h2 class="f3 ttu fw4 ttu tracked mb2">$$$</h2>
   <p>I help bring ideas to life on the web through research, design, making and communication. I run
-    {{ site.description }}.</p>
+    {{ site.description }}</p>
 
   <p><a href="/work" title="See some of Robert Carroll's work">See my work</a></p>
 </section>
