Home page update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ description: "Greetings! I'm a writer, designer and technologist. This is my web
 <section class="pb4">
   <h2 class="f3 ttu fw4 ttu tracked mb2">Writing</h2>
   <ul class="dash">
-    <li>My debut novella is called Drone Wedding. I'm currently editing it (again)</li>
+    <li>I'm currently revising my debut novella (again)</li>
     <li>You can <a href="/writing/short-story-competition" title="Read a short story by Robert Carroll">read Odyssey,
         one of my short stories</a></li>
   </ul>
